@@ -1143,9 +1143,10 @@ public class MatchExecutionPlanner {
     // aliases were visited by edges [0..i-1]. This lets traceBackwardBranch
     // distinguish "main path" aliases from "branch" aliases.
     var visited = new LinkedHashSet<String>();
-    visited.add(sourceAlias(scheduledEdges.getFirst()));
+    visited.add(sourceAlias(scheduledEdges.get(0)));
 
     // visitedBefore[i] = set of aliases visited before edge i is processed
+    @SuppressWarnings("unchecked")
     var visitedBefore = new Set[scheduledEdges.size()];
     for (int i = 0; i < scheduledEdges.size(); i++) {
       visitedBefore[i] = Set.copyOf(visited);
@@ -1327,6 +1328,7 @@ public class MatchExecutionPlanner {
    * @return the traced branch edges, intermediate aliases, and branch root; or
    *         {@code null} if no valid branch was found
    */
+  @SuppressWarnings("unchecked")
   @Nullable private static BranchTrace traceBackwardEdges(
       List<EdgeTraversal> scheduledEdges,
       int checkIdx,
@@ -1351,7 +1353,7 @@ public class MatchExecutionPlanner {
           // First branch edge: must connect to checkSource or checkTarget
           if (prevTarget.equals(checkSource) || prevTarget.equals(checkTarget)) {
             intermediateAliases.add(prevTarget);
-            branchEdges.addFirst(prevEdge);
+            branchEdges.add(0, prevEdge);
             currentAlias = prevSource;
             if (visitedBeforeJ.contains(prevSource)) {
               break;
@@ -1518,7 +1520,7 @@ public class MatchExecutionPlanner {
     var branchEdgeSet = new HashSet<>(branchEdges);
 
     // Find the scan root alias (source of the first scheduled edge)
-    var rootAlias = sourceAlias(scheduledEdges.getFirst());
+    var rootAlias = sourceAlias(scheduledEdges.get(0));
     long rows = estimateAliasCardinality(
         rootAlias, aliasClasses, aliasFilters, aliasPinnedRids, context);
 
@@ -2853,31 +2855,25 @@ public class MatchExecutionPlanner {
       @Nullable DatabaseSessionEmbedded session) {
     var base = classCount > 0 ? filter.getBaseExpression() : null;
     var condition = base != null ? unwrapSingleCondition(base) : null;
-      switch (condition) {
-          case null -> {
-              return -1.0;
-          }
+    if (condition == null) {
+      return -1.0;
+    }
 
+    // Compound AND: multiply individual selectivities (independence assumption).
+    // For example, creationDate >= X AND creationDate < Y → sel(>=X) * sel(<Y).
+    if (condition instanceof SQLAndBlock andBlock && andBlock.getSubBlocks().size() > 1) {
+      return estimateCompoundAndSelectivity(
+          andBlock, classCount, schemaClass, session);
+    }
 
-          // Compound AND: multiply individual selectivities (independence assumption).
-          // For example, creationDate >= X AND creationDate < Y → sel(>=X) * sel(<Y).
-          case SQLAndBlock andBlock when andBlock.getSubBlocks().size() > 1 -> {
-              return estimateCompoundAndSelectivity(
-                      andBlock, classCount, schemaClass, session);
-          }
+    // Compound OR: inclusion-exclusion (independence assumption).
+    // sel(A OR B) = 1 - (1 - sel(A)) * (1 - sel(B))
+    if (condition instanceof SQLOrBlock orBlock && orBlock.getSubBlocks().size() > 1) {
+      return estimateCompoundOrSelectivity(
+          orBlock, classCount, schemaClass, session);
+    }
 
-
-          // Compound OR: inclusion-exclusion (independence assumption).
-          // sel(A OR B) = 1 - (1 - sel(A)) * (1 - sel(B))
-          case SQLOrBlock orBlock when orBlock.getSubBlocks().size() > 1 -> {
-              return estimateCompoundOrSelectivity(
-                      orBlock, classCount, schemaClass, session);
-          }
-          default -> {
-          }
-      }
-
-      if (!(condition instanceof SQLBinaryCondition binary)) {
+    if (!(condition instanceof SQLBinaryCondition binary)) {
       return -1.0;
     }
     return estimateSingleConditionSelectivity(
@@ -4214,6 +4210,7 @@ public class MatchExecutionPlanner {
    * can be replaced with a correlated hash lookup. The pattern is:
    * {@code .out('LABEL'){where: (@rid = $matched.ALIAS.@rid), optional: true}}
    *
+   * @return descriptor or null if the pattern is not detected
    */
   record CorrelatedOptionalDesc(
       String correlatedAlias, String probeAlias, String targetAlias,
@@ -4277,7 +4274,7 @@ public class MatchExecutionPlanner {
       return null;
     }
     var direction = getEdgeDirection(edge);
-    if ((!"out".equals(direction) && !"in".equals(direction))) {
+    if (direction == null || (!"out".equals(direction) && !"in".equals(direction))) {
       return null;
     }
 
@@ -5082,10 +5079,8 @@ public class MatchExecutionPlanner {
   @Nullable private static String lookupLinkedVertexClass(
       String edgeClassName, String propName, CommandContext context) {
     var session = context.getDatabaseSession();
-      assert session != null;
-      var schema = session.getMetadata().getImmutableSchemaSnapshot();
-      assert schema != null;
-      var edgeClass = schema.getClassInternal(edgeClassName);
+    var schema = session.getMetadata().getImmutableSchemaSnapshot();
+    var edgeClass = schema.getClassInternal(edgeClassName);
     if (edgeClass == null) {
       return null;
     }
